# loopmon

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  codeql-analysis.yml
examples/: 01_monitor_and_print.py  02_detects_blocking_function_call.py  03_detects_long_running_coroutine.py  04_compatible_with_uvloop.py  05_zero_cost_callback_handling.py  06_monitoring_another_thread.py
loopmon/: __init__.py  monitor.py
tests/: conftest.py  test_monitor.py
